--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "d3": "^7.8.0",
+    "d3-shape": "^3.2.0",
+    "i18next": "^22.4.9",
+    "i18next-http-backend": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
     "react-scripts": "5.0.1",
     "tailwindcss-dir": "^4.0.0",
     "web-vitals": "^2.1.4"
